--- a/style.css
+++ b/style.css
@@ -28,3 +28,16 @@ footer {
     text-align: center;
     padding: 15px;
 }
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding: 20px;
+}
+
+.item {
+    background-color: #F7B3CC;
+    padding: 40px;
+    text-align: center;
+    border-radius: 5px;
+}
