--- a/style.css
+++ b/style.css
@@ -41,3 +41,8 @@ footer {
     text-align: center;
     border-radius: 5px;
 }
+.gallery img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+}
