--- a/style.css
+++ b/style.css
@@ -207,3 +207,8 @@ section {
     flex-direction: column;
     justify-content: space-between;
 }
+.item img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
