--- a/style.css
+++ b/style.css
@@ -253,3 +253,21 @@ section {
 .event-card p {
     margin: 5px 0;
 }
+header {
+    background: linear-gradient(to right, #4b2e2e, #7b3f00);
+    padding: 25px 0;
+    text-align: center;
+    color: white;
+}
+
+nav a {
+    margin: 0 15px;
+    color: white;
+    font-weight: 500;
+    text-decoration: none;
+    transition: 0.3s ease;
+}
+
+nav a:hover {
+    border-bottom: 2px solid white;
+}
